# telegram-userbot

./: .gitignore  README.md  config.py  main.py  pyproject.toml  requirements.txt
helpers/: ping.py
plugins/: admin.py  elapsed.py  federations.py  help.py  music.py  ping.py  stats.py
userbot/: __init__.py  config.py
