[project]
name = "telegram-userbot"
version = "1.0"
description = "A multipurpose telegram userbot which can be used for moderation as well as playing music in telegram vc."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ping3>=5.1.5",
    "psutil>=7.2.2",
    "py-tgcalls==2.2.1",
    "pyrofork==2.3.62",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "tgcrypto-pyrofork==1.2.7",
    "yt-dlp>=2026.2.4",
]
[tool.setuptools]
py-modules = ["main", "config"]